@@ -30,6 +30,7 @@ version 2.7.8 (??/??/????):
 	  characters. (#8508)
 	* Fix receiving messages from users on Yahoo and other federated
 	  services. (#13022)
+	* Correctly remove old endpoints when they sign out.
 
 version 2.7.7 (11/23/2010):
 	General:
